upgrade dependencies, improve metrics page
